tests/rosetta/out/Smalltalk/100-doors.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:48:35Z
"
| doors idx line |
doors := {}.
0 to: 100 do: [:i |
  doors := doors copyWith: false.
]
.
1 to: 101 do: [:pass |
  idx := (pass - 1).
  [(idx < 100)] whileTrue: [
    doors at: idx put: doors at: idx not.
    idx := (idx + pass).
  ]
  .
]
.
0 to: 10 do: [:row |
  line := ''.
  0 to: 10 do: [:col |
    idx := ((row * 10) + col).
    (doors at: idx) ifTrue: [
      line := (line + '1').
    ] ifFalse: [
      line := (line + '0').
    ].
    ((col < 9)) ifTrue: [
      line := (line + ' ').
    ] .
  ]
  .
  Transcript show: (line) printString; cr.
]
.
